# my-actix-backend-scaffold

./: .gitignore  Cargo.toml  Dockerfile  docker-compose-prod.yml  docker-compose.yml  env.yaml  readme.md
migrations/: V1__initial.sql  V2__create_tags_table.sql  V3__create_post_tag_table.sql  V4__create_posts_table.sql
src/: article.rs  auth_middleware.rs  db.rs  env.rs  jwt.rs  lib.rs  login.rs  main.rs  post.rs  router.rs  util.rs
src/commons/: database_type.rs  mod.rs  service_template.rs
src/db/: migration.rs  model.rs  schema.rs
src/login/: model.rs  service.rs  user_repository.rs
src/post/: model.rs  post_repository.rs  service.rs
test_migrations/: V1__initial.sql  V3__create_post_tag_table.sql  V4__create_posts_table.sql
