[package]
name = "blog-back"
version = "0.1.0"
authors = ["howard chang <idhowardgj94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"
actix-web = "3"
actix-service = "1.0.0"
futures = "0.3"
refinery = { version = "0.5", features = ["mysql", "rusqlite"]}
rusqlite = "*"
assert-type-eq="*"
bcrypt="0.8"
mockall="0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
env_logger = "0.8"
log = "*"
jwt = "0.12.0"
base64 = "0.12"
crypto-mac = "0.9"
digest = "0.9"
hmac = "0.9"
sha2 = "0.9"